[gd_scene load_steps=3 format=3 uid="uid://dj4k52f25351g"]

[ext_resource type="PackedScene" uid="uid://bywnjkjonysu8" path="res://scenes/player.tscn" id="1_5jvha"]
[ext_resource type="Script" uid="uid://bmbr1jdogkynk" path="res://scripts/change_character.gd" id="1_g70dw"]

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g70dw")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.33
anchor_top = 0.12100001
anchor_right = 0.67
anchor_bottom = 0.87900007
offset_left = -0.6000366
offset_top = 0.31999207
offset_right = 0.5999756
offset_bottom = -0.32006836
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.065000005
anchor_right = 0.5
anchor_bottom = 0.065000005
offset_left = -327.0
offset_top = 0.011993408
offset_right = 327.0
offset_bottom = 124.801994
theme_override_constants/separation = 117
alignment = 1

[node name="MaleButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚ôÇÔ∏è"

[node name="FemaleButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "‚ôÄÔ∏è"

[node name="PandaButton" type="Button" parent="Panel/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "üêº"

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel"]
clip_contents = true
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.30900002
anchor_right = 0.5
anchor_bottom = 0.30900002
offset_left = -328.0
offset_top = 0.23799133
offset_right = 326.0
offset_bottom = 400.23798
grow_horizontal = 0
theme_override_constants/separation = -21

[node name="Outfit_Left" type="Button" parent="Panel/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = "<"

[node name="Char_Container" type="PanelContainer" parent="Panel/HBoxContainer2"]
clip_contents = true
custom_minimum_size = Vector2(300, 400)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4

[node name="Player" parent="Panel/HBoxContainer2/Char_Container" instance=ExtResource("1_5jvha")]
position = Vector2(149.99998, 206.99998)
scale = Vector2(10, 10)

[node name="Outfit_Right" type="Button" parent="Panel/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
text = ">"

[node name="Start" type="Button" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.87700003
anchor_right = 0.5
anchor_bottom = 0.87700003
offset_left = -150.0
offset_top = -0.38604736
offset_right = 150.0
offset_bottom = 76.61395
grow_horizontal = 2
grow_vertical = 0

[connection signal="pressed" from="Panel/HBoxContainer/MaleButton" to="." method="_on_male_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/FemaleButton" to="." method="_on_female_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer/PandaButton" to="." method="_on_panda_button_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer2/Outfit_Left" to="." method="_on_outfit_left_pressed"]
[connection signal="pressed" from="Panel/HBoxContainer2/Outfit_Right" to="." method="_on_outfit_right_pressed"]
[connection signal="pressed" from="Panel/Start" to="." method="_on_start_pressed"]
